@@ -14,38 +14,57 @@ import com.sun.source.tree.*;
 import com.sun.source.util.TreeScanner;
 
 import javax.lang.model.element.Element;
-import javax.lang.model.type.TypeMirror;
+import javax.lang.model.element.ExecutableElement;
+import javax.lang.model.element.TypeElement;
+import java.util.LinkedHashSet;
+import java.util.Set;
 
 /**
- * Detects complex processing logic inside {@code JurlProxyFallback.goThen()} lambdas.
+ * Detects application-service calls inside {@code JurlProxyFallback.goThen()} for-loops.
  *
- * <p>Logic errors in goThen() trigger retries with all proxy types, wasting proxy credits.
- * Only JSON parsing and basic response validation belong in goThen().
+ * <p>{@code goThen()} is the retry boundary: any exception thrown inside it causes
+ * {@code JurlProxyFallback} to retry the HTTP request with the next proxy type (STATIC →
+ * ISP → RESIDENTIAL → ZENROWS → SCRAPFLY). A for-loop over parsed response data is
+ * structurally fine — the real risk is calling application services (database lookups,
+ * ORM queries, external HTTP calls) from inside that loop. Those calls can throw for
+ * reasons completely unrelated to the HTTP response, exhausting all proxy types on a
+ * logic bug instead of a network error.
  *
- * <p><b>Flags:</b> for-loops, stream.collect(), complex stream chains (>5 ops), many statements (>5), deep nesting (>2)
+ * <p>Plain iteration over a parsed response collection — field access, string manipulation,
+ * JSoup DOM operations, JSON parsing — is safe and not flagged.
+ *
+ * <p><b>Flags:</b> for-loops containing calls to application-service methods — identified
+ * by their declaring class being in a {@code com.pear.*} package other than the HTTP/lang
+ * utility packages ({@code com.pear.http}, {@code com.pear.lang}, {@code com.pear.text},
+ * {@code com.pear.concurrency.currency}).
  *
  * <p><b>Example:</b>
  * <pre>{@code
- * // BAD: Processing in goThen wastes proxies on NPE
- * .goThen(jurl -> {
- *     List<Store> stores = jurl.getResponseJsonList(Store.class);
- *     Map<String, Store> map = new HashMap<>();
- *     for (Store s : stores) { map.put(s.id, s); }  // ← Flagged
- *     return map;
+ * // BAD: UPC.fetchFuzzy() is a DB call — throws inside goThen retries all proxies
+ * .goThen(lj -> {
+ *     MikMakConfig config = JSON.parseObject(lj.getResponseBody(), MikMakConfig.class);
+ *     for (MikMakProduct product : config.products) {
+ *         UPC upc = UPC.fetchFuzzy(product.ean);   // ← DB call, flagged
+ *         ...
+ *     }
+ *     return results;
  * });
  *
- * // GOOD: Only parsing in goThen
- * List<Store> stores = new JurlProxyFallback(...)
- *     .goThen(jurl -> jurl.getResponseJsonList(Store.class))
+ * // GOOD: parse in goThen, do DB lookups outside the retry boundary
+ * MikMakConfig config = new JurlProxyFallback(...)
+ *     .goThen(lj -> JSON.parseObject(lj.getResponseBody(), MikMakConfig.class))
  *     .get();
- * Map<String, Store> map = new HashMap<>();
- * for (Store s : stores) { map.put(s.id, s); }  // Processing outside - OK
+ * for (MikMakProduct product : config.products) {
+ *     UPC upc = UPC.fetchFuzzy(product.ean);   // safe here
+ *     ...
+ * }
  * }</pre>
  */
 @AutoService(BugChecker.class)
 @BugPattern(
     name = "ComplexLogicInGoThen",
-    summary = "Complex processing in JurlProxyFallback.goThen() wastes proxy credits on logic errors",
+    summary = "Application-service call inside a goThen() for-loop — if it throws, " +
+              "JurlProxyFallback retries across all proxy types for a non-network error",
     severity = SeverityLevel.WARNING
 )
 public final class ComplexLogicInGoThen extends BugChecker
@@ -53,6 +72,18 @@ public final class ComplexLogicInGoThen extends BugChecker
 
     private static final Matcher<ExpressionTree> GO_THEN =
         instanceMethod().onExactClass("com.pear.http.JurlProxyFallback").named("goThen");
+
+    /**
+     * com.pear.* sub-packages that contain only response/HTTP/text utilities and are safe
+     * to call from inside goThen(). Everything else under com.pear.* is application code
+     * (ORM, entities, jobs, scrapers) that can throw for non-network reasons.
+     */
+    private static final java.util.Set<String> SAFE_PEAR_PACKAGES = java.util.Set.of(
+        "com.pear.http",
+        "com.pear.lang",
+        "com.pear.text",
+        "com.pear.concurrency.currency"
+    );
 
     @Override
     public Description matchMethodInvocation(MethodInvocationTree tree, VisitorState state) {
@@ -64,137 +95,93 @@ public final class ComplexLogicInGoThen extends BugChecker
             return Description.NO_MATCH;
         }
 
-        ExpressionTree arg = tree.getArguments().get(0);
-        if (!(arg instanceof LambdaExpressionTree)) {
+        ExpressionTree arg = tree.getArguments().getFirst();
+        if (!(arg instanceof LambdaExpressionTree lambda)) {
             return Description.NO_MATCH;
         }
 
-        LambdaExpressionTree lambda = (LambdaExpressionTree) arg;
-
-        // Count top-level statements only (don't sum nested blocks)
-        int topLevelStatements = 0;
         Tree body = lambda.getBody();
-        if (body instanceof BlockTree) {
-            topLevelStatements = ((BlockTree) body).getStatements().size();
+        if (!(body instanceof BlockTree)) {
+            return Description.NO_MATCH;
         }
 
-        ComplexityScanner scanner = new ComplexityScanner(state, topLevelStatements);
+        AppServiceCallInLoopScanner scanner = new AppServiceCallInLoopScanner();
         lambda.getBody().accept(scanner, null);
 
-        if (scanner.hasComplexLogic()) {
+        if (!scanner.violations.isEmpty()) {
+            String calls = String.join(", ", scanner.violations);
             return buildDescription(tree)
-                .setMessage(buildMessage(scanner))
+                .setMessage(
+                    "goThen() for-loop calls application service(s): " + calls + ". " +
+                    "If any of these throw, JurlProxyFallback retries across all proxy types " +
+                    "(STATIC → ISP → RESIDENTIAL → ZENROWS → SCRAPFLY) for a non-network error. " +
+                    "Move the loop outside goThen() — parse the response inside, process outside."
+                )
                 .build();
         }
 
         return Description.NO_MATCH;
     }
 
-    private String buildMessage(ComplexityScanner scanner) {
-        StringBuilder msg = new StringBuilder(
-            "Complex processing in goThen() wastes proxy credits. Move logic outside. Found: "
-        );
+    /**
+     * Scans lambda body for for-loops that contain application-service method calls.
+     * Does not recurse into nested lambdas.
+     */
+    private static class AppServiceCallInLoopScanner extends TreeScanner<Void, Void> {
 
-        boolean first = true;
-        if (scanner.hasForLoop) {
-            msg.append("for-loop");
-            first = false;
-        }
-        if (scanner.hasStreamCollect) {
-            if (!first) msg.append(", ");
-            msg.append("stream.collect()");
-            first = false;
-        }
-        if (scanner.streamOpCount > 5) {
-            if (!first) msg.append(", ");
-            msg.append(scanner.streamOpCount).append(" stream operations (>5)");
-            first = false;
-        }
-        if (scanner.statementCount > 5) {
-            if (!first) msg.append(", ");
-            msg.append(scanner.statementCount).append(" statements (>5)");
-            first = false;
-        }
-        if (scanner.hasNestedConditional) {
-            if (!first) msg.append(", ");
-            msg.append("deeply nested conditionals (>2)");
-        }
+        private boolean insideLoop = false;
+        final Set<String> violations = new LinkedHashSet<>();
 
-        return msg.toString();
-    }
-
-    /** Scans lambda body for patterns indicating business logic vs simple parsing. */
-    private static class ComplexityScanner extends TreeScanner<Void, Void> {
-        private static final java.util.Set<String> STREAM_INTERMEDIATE_OPS = java.util.Set.of(
-            "map", "flatMap", "filter", "peek", "distinct", "sorted", "limit", "skip"
-        );
-
-        private final VisitorState state;
-        private final int statementCount;
-
-        boolean hasForLoop = false;
-        boolean hasStreamCollect = false;
-        boolean hasNestedConditional = false;
-        int conditionalDepth = 0;
-        int streamOpCount = 0;
-
-        ComplexityScanner(VisitorState state, int statementCount) {
-            this.state = state;
-            this.statementCount = statementCount;
-        }
-
-        boolean hasComplexLogic() {
-            return hasForLoop || hasStreamCollect || statementCount > 5 || hasNestedConditional || streamOpCount > 5;
+        @Override
+        public Void visitLambdaExpression(LambdaExpressionTree node, Void unused) {
+            return null;
         }
 
         @Override
         public Void visitForLoop(ForLoopTree node, Void unused) {
-            hasForLoop = true;
-            return super.visitForLoop(node, unused);
+            boolean wasInLoop = insideLoop;
+            insideLoop = true;
+            super.visitForLoop(node, unused);
+            insideLoop = wasInLoop;
+            return null;
         }
 
         @Override
         public Void visitEnhancedForLoop(EnhancedForLoopTree node, Void unused) {
-            hasForLoop = true;
-            return super.visitEnhancedForLoop(node, unused);
+            boolean wasInLoop = insideLoop;
+            insideLoop = true;
+            super.visitEnhancedForLoop(node, unused);
+            insideLoop = wasInLoop;
+            return null;
         }
 
         @Override
         public Void visitMethodInvocation(MethodInvocationTree node, Void unused) {
-            Element symbol = ASTHelpers.getSymbol(node);
-            if (symbol == null) {
-                return super.visitMethodInvocation(node, unused);
-            }
-
-            String methodName = symbol.getSimpleName().toString();
-            ExpressionTree receiver = ASTHelpers.getReceiver(node);
-
-            if (receiver != null) {
-                TypeMirror receiverType = ASTHelpers.getType(receiver);
-                if (receiverType != null) {
-                    String typeName = receiverType.toString();
-                    // Match java.util.stream.Stream and its specializations (IntStream, LongStream, etc.)
-                    if (typeName.startsWith("java.util.stream.")) {
-                        if ("collect".equals(methodName)) {
-                            hasStreamCollect = true;
-                        } else if (STREAM_INTERMEDIATE_OPS.contains(methodName)) {
-                            streamOpCount++;
-                        }
+            if (insideLoop) {
+                Element sym = ASTHelpers.getSymbol(node);
+                if (sym instanceof ExecutableElement exec
+                        && exec.getEnclosingElement() instanceof TypeElement enclosing) {
+                    String className = enclosing.getQualifiedName().toString();
+                    if (isApplicationServiceClass(className)) {
+                        String methodName = exec.getSimpleName().toString();
+                        String violation = className.substring(className.lastIndexOf('.') + 1) + "." + methodName + "()";
+                        violations.add(violation);
                     }
                 }
             }
             return super.visitMethodInvocation(node, unused);
         }
 
-        @Override
-        public Void visitIf(IfTree node, Void unused) {
-            conditionalDepth++;
-            if (conditionalDepth > 2) {
-                hasNestedConditional = true;
+        private boolean isApplicationServiceClass(String qualifiedClassName) {
+            if (!qualifiedClassName.startsWith("com.pear.")) {
+                return false;
             }
-            Void result = super.visitIf(node, unused);
-            conditionalDepth--;
-            return result;
+            for (String safe : SAFE_PEAR_PACKAGES) {
+                if (qualifiedClassName.startsWith(safe + ".") || qualifiedClassName.equals(safe)) {
+                    return false;
+                }
+            }
+            return true;
         }
     }
 }
